--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                             </a>
                         </div>
                         <div class="footer-email">
-                            <a href="">ranahstu004@gmail.com</a>
+                            <a href="">youremail@gmail.com</a>
                         </div>
                     </div>
                     <div class="footer-bottom">
